src/main/java/com/example/assignment/global/error/ErrorResponse.java
package com.example.assignment.global.error;public class ErrorResponse {
}
